--- a/laman29.html
+++ b/laman29.html
@@ -1,90 +1,6 @@
-1. Zyphor88
-2. Vexlyn12
-3. Draltox
-4. Gryndis
-5. Pyxanor
-6. Jynmar
-7. Klyzor
-8. Bryxel
-9. Sylvex
-10. Nymdrix
-11. Qorvix
-12. Tylphor
-13. Zyndal
-14. Vexmar
-15. Dralyn
-16. Gryzor
-17. Pyxdis
-18. Jynvor
-19. Klyndis
-20. Bryxar
-21. Sylzor
-22. Nymtor
-23. Qorvex
-24. Tylmar
-25. Zyndis
-26. Vexdor
-27. Dralyx
-28. Gryndor
-29. Pyxlyn
-30. Jynzor
-31. Klymar
-32. Bryxel
-33. Syltor
-34. Nymvex
-35. Qorlyn
-36. Tylzor
-37. Zyndar
-38. Vexdis
-39. Dralmar
-40. Gryxel
-41. Pyxdis
-42. Jynzor
-43. Klyndar
-44. Bryxel
-45. Sylmar
-46. Nymzor
-47. Qorvex
-48. Tylmar
-49. Zyndis
-50. Vexzor
-51. Dralyx
-52. Gryndor
-53. Pyxlyn
-54. Jynzor
-55. Klymar
-56. Bryxel
-57. Syltor
-58. Nymvex
-59. Qorlyn
-60. Tylzor
-61. Zyndar
-62. Vexdis
-63. Dralmar
-64. Gryxel
-65. Pyxdis
-66. Jynzor
-67. Klyndar
-68. Bryxel
-69. Sylmar
-70. Nymzor
-71. Qorvex
-72. Tylmar
-73. Zyndis
-74. Vexzor
-75. Dralyx
-76. Gryndor
-77. Pyxlyn
-78. Jynzor
-79. Klymar
-80. Bryxel
-81. Syltor
-82. Nymvex
-83. Qorlyn
-84. Tylzor
-85. Zyndar
-86. Vexdis
-87. Dralmar
-88. Gryxel
-89. Pyxdis
-90. Jynzor
+laman29.com
+laman29.io
+laman29.cn
+laman29.top
+laman29.site
+iaman29.tk
